<resources>
    <string name="app_name">GroceryExpress</string>
    <string name="info_name">Info</string>
    <string name="store">Store</string>
    <string name="price">Price $</string>
    <string name="location">Location</string>
    <string name="price_diff">Price Diff</string>
    <string name="backBtnText">Back</string>
    <string name="locateText">locate</string>
    <string-array name="NameList">
        <item>Walmart</item>
        <item>Cosco</item>
    </string-array>
    <string-array name="PriceList">
        <item>$5.00</item>
        <item>$4.89</item>
    </string-array>
    <string-array name="LocationList">
        <item>5800 US Hwy 98</item>
        <item>10921  Causeway</item>
    </string-array>
    <string-array name="PriceDiffList">
        <item>+$0.11</item>
        <item>+$0.00</item>
    </string-array>
    <string name="CreateNewListBtnText">Create List</string>
    <string name="ListName">NullName</string>
    <string name="AddItemText">Add Item To List</string>
    <string name="AddItemBtnText">Add Item</string>
    <string name="AddListText">Create a New List</string>
    <string name="AddListBtnText">Create List</string>
    <string-array name="GroceryList">
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
        <item>Tech Items</item>
        <item>Grocery Items</item>
        <item>Snacks</item>
    </string-array>

    <string-array name="ItemList">
        <item>Graphics Card</item>
        <item>Soccer Ball</item>
        <item>football</item>
        <item>Wireless mouse</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>