<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NearbyStores">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/info_name"
        android:textAlignment="center"
        android:textColor="@color/TitleColor"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5sp">


        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:text="@string/store"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:text="@string/location"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/Price_Diff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:text="@string/price_diff"
            android:textAlignment="center"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5sp">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/NameList" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/PriceList" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/LocationList" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/PriceDiffList" />
    </LinearLayout>

</LinearLayout>