<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/ListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"

        android:text="@string/ListName"
        android:textColor="@color/TitleColor"
        android:textSize="50sp" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/ItemListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="25dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estimated Total"
        android:layout_gravity="left"
        android:textSize="25dp"
        android:textColor="@color/lightgreen"/>
    <TextView
        android:id="@+id/TotalListPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/lightgreen"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/ItemBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/backBtnText"
        android:layout_weight="1"
        android:onClick="BackOnItemClick"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/AddItemBtnText"
        android:layout_weight="1"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>
</LinearLayout>

</LinearLayout>